Version 2.02.89 - 
==================================
  Prompt if request is made to remove a snapshot whose "Merge failed".
  Allow removal of an invalid snapshot that was to be merged on next activation.
  Don't allow a user to merge an invalid snapshot.
  Use m and M lv_attr to indicate that a snapshot merge failed in lvs.
  Differentiate between snapshot status of "Invalid" and "Merge failed".
  Lookup snapshot usage percent of origin volume when a snapshot is merging.
  Update lvdisplay with backward compat. config opt. lvm1_compatible_display.
  Do not report linear segtype for non-striped targets.
  Keep info about creation host and time for each logical volume.
  Make error message hit when preallocated memlock memory exceeded clearer.
  Use R lv_attr to indicate read-only activation of non-read-only device in lvs.
  Show read-only activation override in lvdisplay & add 4 to perms in -c.
  Add activation/read_only_volume_list to override LV permission in metadata.
  Give priority to emcpower devices with duplicate PVIDs.
  Add check for error in _adjust_policy_params() (lvextend --use-policies).
  Supports rounding of percentage (%LV, %VG...) for LV resize upward.
  Use dmeventd_lvm2_command in dmeventd plugins snapshot, raid, mirror.
  Add helper dmeventd_lvm2_command() into libdevmapper-event-lvm2 library.
  Updated documentation for dmeventd.
  Drop extra stat call before opening device.
  Reduce number of lstat calls when selecting device alias.
  Add function to inialize common structure device members.
  Always zalloc device structure during initialization.
  Fix missing thread list manipulation protection in dmeventd.
  Do not derefence lv pointer in _percent_run() function before NULL check.
  Allow empty strings for description and creation_host config fields.
  Issue deprecation warning when removing last lvm1-format snapshot.
  Reinstate support for snapshot removal with lvm1 format. (2.02.86)